# llcat

./: .gitignore  MAS.md  README.md  conversation.sh  example_tool_file.json  example_tool_program.py  fancy.sh  llcat  llcat.py  mcpcat  pyproject.toml
examples/: conversation.sh  spinner  state.sh  tool_file.json  tool_program.py
tests/: failures.sh
